@@ -16,6 +16,8 @@
    md5 checksums, etc.
  * made sure to null terminate strings of package structure elements in
    case assignment isn't made.
+ * added check for correct size of package after download, return incomplete
+   download instead of continuing and returning a failed md5 checksum
 
 0.9.8 Dec 18, 2003
  * added slapt-get source to example slapt-getrc
